correction de la page cv en version mobile

--- a/style.css
+++ b/style.css
@@ -310,21 +310,21 @@
         padding-left: 50px;
     }
    }
-   .realisation{
+   .accomplissement{
     width: 100%;
     padding-top: 60px;
     padding-left: 20px;
     padding-right: 20px;
    }
-   .experience{
+   .experience_obtenue{
     margin-left: 20px;
     margin-right: 20px;
    }
-   .competence{
+   .competence_acquise{
     margin-left: 20px;
     margin-right: 20px;
    }
-   .langue{
+   .langue_p{
     margin-left: 20px;
     margin-right: 20px;
    }
@@ -380,11 +380,11 @@
     }
     .fashion .fashion-img img{
         width: 350px;
-    } 
+    }
  }
 
     
-       
+    
     
        
        
